compiler-core/src/snapshots/gleam_core__config__tests__barebones_package_config_to_json.snap
---
source: compiler-core/src/config.rs
assertion_line: 818
expression: output
---
--- GLEAM.TOML

name = "my_project"
version = "1.0.0"


--- EXPORTED JSON

{
  "name": "my_project",
  "version": "1.0.0",
  "gleam": null,
  "licences": [],
  "description": "",
  "documentation": {
    "pages": []
  },
  "dependencies": {},
  "dev_dependencies": {},
  "repository": null,
  "links": [],
  "erlang": {
    "application_start_module": null,
    "application_start_argument": null,
    "extra_applications": []
  },
  "javascript": {
    "typescript_declarations": false,
    "source_maps": false,
    "runtime": "nodejs",
    "deno": {
      "allow_env": [],
      "allow_sys": false,
      "allow_hrtime": false,
      "allow_net": [],
      "allow_ffi": false,
      "allow_read": [],
      "allow_run": [],
      "allow_write": [],
      "allow_all": false,
      "unstable": false,
      "location": null
    }
  },
  "target": "erlang",
  "internal_modules": null
}
