compiler-core/src/snapshots/gleam_core__config__tests__name_with_number_start.snap
---
source: compiler-core/src/config.rs
assertion_line: 751
expression: "toml::from_str::<PackageConfig>(input).unwrap_err().to_string()"
---
TOML parse error at line 2, column 8
  |
2 | name = "1"
  |        ^^^
Package names may only contain lowercase letters, numbers, and underscores
